added logo to top nav, fixed drop down menu and added bottom nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MelbourneUnlocked</title>
+    <title>Melbourne Unlocked</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -17,5 +17,9 @@
     <%= render 'shared/flashes' %>
 
     <%= yield %>
+
   </body>
+  <footer class="footer">
+  <%= render 'shared/bottom_navbar' %>
+  </footer>
 </html>
