--- a/app/assets/stylesheets/components/_bottom_navbar.scss
+++ b/app/assets/stylesheets/components/_bottom_navbar.scss
@@ -13,11 +13,13 @@
 }
 
 .footer .container-fluid a {
-  color: black;
+  color: #00A79D;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 .footer .container-fluid a:hover {
   opacity: 1;
