used version 5 fontawesome icons to update bottom nav

--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="px-3 border-top navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fas fa-search"></i></a>
+    <a href="#"><i class="fas fa-home"></i></a>
+    <a href="#"><i class="fas fa-trophy"></i></a>
+    <a href="#"><i class="fas fa-user"></i></a>
   </div>
 </div>
