--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -3,6 +3,10 @@
     <a href="#"><i class="fas fa-search"></i></a>
     <a href="#"><i class="fas fa-home"></i></a>
     <a href="#"><i class="fas fa-trophy"></i></a>
-    <a href="#"><i class="fas fa-user"></i></a>
+    <% if user_signed_in? %>
+    <%= link_to image_tag('raggy.png', class: "avatar") , profile_path(current_user.username) %>
+    <% else %>
+    <a href="<%new_user_session_path%>"><i class="fas fa-user"></i></a>
+    <% end %>
   </div>
 </div>
