--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,17 @@
-<h2>Sign up</h2>
+<div class="container justify-content-center">
 
+<h2>Sign up</h2>
+<p>Start unlocking locks and having an adventure in Melbourne today!</p>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :username,
+                required: true,
+                input_html: { autocomplete: "username" } %>
+    <%= f.input :photo,
+                required: true,
+                input_html: { autocomplete: "photo" } %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -23,3 +31,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
