added pretty banner to profile page

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,1 +1,5 @@
-<h1><%= @user.username %>'s Profile Page</h1>
+<div class="profile_banner">
+<br>
+        <img src=<%= @user.photo %>>
+        <h1><%= @user.username %>'s Profile Page</h1>
+  </div>
