--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="px-3 border-top navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="px-3 border-top navbar navbar-expand-sm navbar-light bottom_navbar-lewagon">
   <div class="container-fluid">
     <%= link_to root_path do %>
      <i class="fas fa-search"></i>
