--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,8 @@
 .avatar {
   width: 40px;
-  border-radius: 50%;
+  height: 40px;
+  border-radius: 100%;
+  object-fit: cover;
 }
 .avatar-large {
   width: 56px;
