updated profile banner of lock show page to say whether its locked or not

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,4 +10,5 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 
 $unlocked-blue: #00A79D;
-$unlocked-light: #99c1be;
+$unlocked-light: #b0dfe0;
+$unlocked-dark: #065863;
