added locks with no visits into seed and added an if statment on the lock show page to show locked items

--- a/app/assets/stylesheets/components/_profile_banner.scss
+++ b/app/assets/stylesheets/components/_profile_banner.scss
@@ -12,15 +12,13 @@
   background-position: center;
   text-align: center;
   padding: 20px;
-  display: flex;
 }
 
 .mini_banner svg {
   width: 60px;
   height: 60px;
-  margin-right: 20px;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .profile_banner img {
