--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -3,7 +3,24 @@
         <img src=<%= @user.photo %>>
         <h1><%= @user.username %>'s Profile Page</h1>
   </div>
-  <h1>these are you unlocked locks!</h1>
-<% @visits.each do |visit| %>
-<p> <strong>unlocked date: </strong> <%= visit.unlocked_date %> </p>
-          <% end %>
+<div class="mini_banner">
+    <p><strong> <i class="fas fa-trophy"></i>  Total Unlocked: </strong> <%= @user_visits.count %> /
+    <%= @locks.count %> </p>
+</div>
+<div class="container">
+<br>
+  <h1>Unlocked History!</h1>
+<br>
+<div class="cards">
+  <% @user_visits.each do |visit| %>
+  <div class="card mb-3">
+    <div class="section">
+    <img src= <%= visit.lock.image %> alt="" width="50px;" height="50px;">
+    </div>
+    <div class="section">
+      <h2><%= visit.lock.name %></h2>
+      <p> <%= visit.unlocked_date %></p>
+    </div>
+  </div>
+<% end %>
+</div>
