started building leaderboard

--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -6,7 +6,7 @@
     <%= link_to root_path do %>
       <i class="fas fa-home"></i>
     <% end %>
-        <%= link_to root_path do %>
+        <%= link_to leaderboard_path do %>
      <i class="fas fa-trophy"></i>
     <% end %>
     <% if user_signed_in? %>
