--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -8,3 +8,19 @@
 legend ~ div.form-check:first-of-type {
   clear: left;
 }
+
+.new-lock-container {
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 70px;
+}
+
+.map-container {
+  height: 80%;
+  border-radius: 10px;
+  margin-top: 18px;
+  margin-left: 18px;
+  margin-right: 18px;
+  padding-bottom: 75px;
+}
