--- a/app/views/locks/index.html.erb
+++ b/app/views/locks/index.html.erb
@@ -1,5 +1,5 @@
-<div style="width: 100%; height: 100%;"
-  data-controller="mapbox"
-  data-mapbox-markers-value="<%= @markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-</div>
+  <div class="map-container"
+    data-controller="mapbox"
+    data-mapbox-markers-value="<%= @markers.to_json %>"
+    data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
