--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 
   </body>
   <footer class="footer">
+  <div style="height: 70px;"></div>
   <%= render 'shared/bottom_navbar' %>
   </footer>
 </html>
