--- a/app/views/pages/leaderboard.html.erb
+++ b/app/views/pages/leaderboard.html.erb
@@ -3,58 +3,58 @@
     <h1> Leaderboard</h1>
     <br>
     <div class="leaderboard">
-    <div class="unlockedtop">
-    <% @top_two.each do |user| %>
-      <img src= <%= user.photo %> alt="" width="50px;" height="50px;" class="mt-4">
-      <p><%= user.username %></p>
-    <% end %>
-    </div>
-    <div class="unlockedtop">
-    <% @top_one.each do |user| %>
-      <img src= <%= user.photo %> alt="" width="50px;" height="50px;">
-      <p><%= user.username %></p>
-    <% end %>
-    </div>
-    <div class="unlockedtop">
-    <% @top_three.each do |user| %>
-      <img src= <%= user.photo %> alt="" width="50px;" height="50px;" class="mt-4">
-      <p><%= user.username %></p>
-    <% end %>
-    </div>
-  </div>
-    <div class="leaderboardimage">
-      <?xml version="1.0" encoding="UTF-8"?><svg id="Layer_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.32 72.27"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#a7c4c6;}.cls-3{fill:#fdea75;}.cls-4{fill:#eab279;}.cls-5{fill:#cce6ef;}.cls-6{fill:#e1c023;}.cls-7{fill:#dea64f;}</style></defs><g id="Layer_1-2"><rect class="cls-2" y="20" width="42.25" height="52.27"/><polygon class="cls-5" points="42.25 20 0 20 9.21 10.68 42.25 10.68 42.25 20"/><rect class="cls-6" x="42.25" y="7.04" width="41.44" height="65.23"/><polygon class="cls-3" points="83.69 7.04 42.25 7.04 50.9 0 75.26 0 83.69 7.04"/><rect class="cls-7" x="83.69" y="27.4" width="42.63" height="44.87"/><polygon class="cls-4" points="126.32 27.4 83.69 27.4 83.69 18.55 116.67 18.55 126.32 27.4"/><g><path class="cls-1" d="M12.82,34.31h2.86c.29,0,.5,.06,.65,.18s.22,.28,.22,.48c0,.18-.06,.33-.18,.46-.12,.12-.3,.19-.54,.19h-4.04c-.27,0-.49-.08-.64-.23s-.23-.33-.23-.53c0-.13,.05-.31,.15-.52,.1-.22,.21-.39,.32-.51,.49-.5,.92-.94,1.32-1.3,.39-.36,.67-.6,.84-.71,.3-.21,.55-.42,.75-.64s.35-.43,.46-.66c.1-.22,.16-.44,.16-.66,0-.23-.06-.44-.17-.63-.11-.18-.26-.33-.46-.43-.19-.1-.4-.15-.63-.15-.48,0-.86,.21-1.13,.63-.04,.05-.1,.2-.18,.45s-.18,.43-.29,.56c-.11,.13-.27,.2-.47,.2-.18,0-.33-.06-.46-.18s-.18-.29-.18-.49c0-.25,.06-.52,.17-.79,.11-.27,.28-.52,.51-.75s.51-.4,.86-.54,.75-.21,1.21-.21c.56,0,1.04,.09,1.43,.26,.26,.12,.48,.28,.67,.48s.34,.44,.45,.71c.11,.27,.16,.55,.16,.84,0,.45-.11,.87-.34,1.24-.23,.37-.45,.66-.69,.87-.23,.21-.63,.54-1.18,.99s-.93,.8-1.13,1.05c-.09,.1-.18,.22-.27,.36Z"/><path class="cls-1" d="M19.12,30.48v.18c.26-.35,.55-.6,.86-.76,.31-.16,.67-.24,1.08-.24s.75,.09,1.06,.26c.31,.17,.54,.42,.7,.73,.1,.18,.16,.38,.19,.59s.04,.48,.04,.81v2.78c0,.3-.07,.53-.21,.68-.14,.15-.31,.23-.53,.23s-.4-.08-.54-.24-.21-.38-.21-.67v-2.49c0-.49-.07-.87-.21-1.13-.14-.26-.41-.39-.82-.39-.27,0-.51,.08-.73,.24-.22,.16-.38,.38-.48,.66-.07,.22-.11,.64-.11,1.25v1.88c0,.3-.07,.53-.21,.68-.14,.15-.32,.23-.54,.23s-.39-.08-.53-.24-.21-.38-.21-.67v-4.33c0-.29,.06-.5,.19-.64,.12-.14,.29-.21,.51-.21,.13,0,.25,.03,.36,.09,.11,.06,.19,.16,.25,.28,.06,.12,.1,.28,.1,.46Z"/><path class="cls-1" d="M28.64,34.88v-.15c-.2,.23-.4,.42-.59,.56-.2,.14-.41,.25-.64,.33-.23,.08-.48,.11-.75,.11-.36,0-.69-.08-1-.23-.3-.15-.57-.37-.79-.65s-.39-.61-.51-.99-.17-.79-.17-1.23c0-.94,.23-1.67,.69-2.19,.46-.52,1.06-.78,1.8-.78,.43,0,.79,.07,1.09,.22,.3,.15,.58,.38,.87,.68v-2.21c0-.31,.06-.54,.18-.7,.12-.16,.3-.24,.52-.24s.4,.07,.52,.22c.12,.14,.18,.36,.18,.64v6.6c0,.29-.07,.5-.2,.64s-.3,.21-.51,.21-.37-.07-.51-.22c-.13-.15-.2-.36-.2-.63Zm-2.94-2.2c0,.41,.06,.75,.19,1.04,.13,.29,.3,.5,.52,.64,.22,.14,.46,.22,.72,.22s.5-.07,.72-.21c.22-.14,.39-.35,.52-.63s.2-.64,.2-1.06c0-.4-.07-.74-.2-1.03s-.3-.51-.53-.66c-.22-.15-.46-.23-.73-.23s-.52,.08-.73,.23-.38,.38-.5,.67c-.12,.29-.18,.63-.18,1.01Z"/></g><g><path class="cls-1" d="M57.92,20.94v-4.99c-.93,.71-1.55,1.07-1.88,1.07-.15,0-.29-.06-.41-.18-.12-.12-.18-.26-.18-.42,0-.19,.06-.32,.18-.41s.32-.2,.62-.34c.44-.21,.8-.43,1.06-.66,.27-.23,.5-.49,.71-.77,.2-.29,.34-.46,.4-.53,.06-.07,.18-.1,.35-.1,.19,0,.35,.07,.47,.22,.12,.15,.18,.36,.18,.62v6.28c0,.73-.25,1.1-.75,1.1-.22,0-.4-.07-.54-.22-.14-.15-.2-.37-.2-.66Z"/><path class="cls-1" d="M67.01,19.88c0,.41-.1,.77-.3,1.06-.2,.29-.5,.52-.89,.67-.39,.15-.87,.23-1.43,.23s-1-.08-1.38-.25c-.38-.17-.67-.37-.85-.62-.18-.25-.27-.49-.27-.74,0-.16,.06-.3,.17-.42s.27-.17,.44-.17c.16,0,.28,.04,.36,.11,.08,.08,.17,.18,.24,.32,.15,.27,.34,.47,.55,.6,.21,.13,.5,.2,.87,.2,.3,0,.55-.07,.74-.2,.19-.13,.29-.29,.29-.46,0-.26-.1-.46-.3-.58-.2-.12-.53-.24-.98-.35-.51-.13-.93-.26-1.26-.4s-.58-.33-.78-.56c-.19-.23-.29-.51-.29-.85,0-.3,.09-.58,.27-.85s.44-.48,.79-.64c.35-.16,.77-.24,1.26-.24,.39,0,.74,.04,1.04,.12,.31,.08,.57,.19,.77,.32,.21,.13,.36,.29,.47,.45s.16,.33,.16,.48c0,.17-.06,.31-.17,.42-.12,.11-.28,.17-.49,.17-.15,0-.28-.04-.39-.13s-.23-.22-.37-.39c-.11-.15-.25-.26-.4-.35-.15-.09-.36-.13-.62-.13s-.5,.06-.67,.17c-.18,.11-.27,.26-.27,.43,0,.16,.07,.29,.2,.39,.13,.1,.31,.18,.53,.25,.22,.07,.53,.15,.92,.24,.46,.11,.84,.25,1.14,.41,.29,.16,.52,.34,.67,.56s.23,.46,.23,.73Z"/><path class="cls-1" d="M68.36,15.88h.16v-.9c0-.24,0-.43,.02-.57s.05-.25,.11-.35c.06-.1,.14-.19,.25-.25,.11-.06,.23-.1,.37-.1,.19,0,.36,.07,.51,.21,.1,.1,.17,.21,.2,.35,.03,.14,.04,.33,.04,.58v1.02h.55c.21,0,.37,.05,.49,.15s.17,.23,.17,.39c0,.2-.08,.34-.24,.42s-.39,.12-.68,.12h-.28v2.75c0,.23,0,.41,.02,.54s.06,.23,.13,.31c.07,.08,.19,.12,.35,.12,.09,0,.21-.02,.36-.05,.15-.03,.27-.05,.35-.05,.12,0,.23,.05,.33,.15,.1,.1,.15,.22,.15,.36,0,.24-.13,.43-.39,.55s-.64,.19-1.13,.19c-.47,0-.82-.08-1.06-.24s-.4-.38-.47-.65c-.07-.28-.11-.65-.11-1.11v-2.87h-.2c-.22,0-.38-.05-.49-.15-.11-.1-.17-.23-.17-.39s.06-.29,.18-.39c.12-.1,.29-.15,.52-.15Z"/></g><g><path class="cls-1" d="M99.01,38.82c.34,0,.63-.1,.87-.3,.24-.2,.37-.48,.37-.85,0-.28-.1-.52-.29-.73-.19-.2-.46-.3-.78-.3-.22,0-.41,.03-.55,.09-.14,.06-.26,.14-.34,.25s-.16,.23-.24,.39c-.08,.16-.14,.31-.21,.46-.04,.08-.1,.14-.2,.18-.09,.04-.2,.07-.33,.07-.15,0-.28-.06-.4-.18-.12-.12-.18-.28-.18-.47s.06-.39,.17-.6,.28-.41,.5-.6c.22-.19,.5-.34,.83-.46,.33-.12,.7-.17,1.1-.17,.35,0,.68,.05,.97,.15,.29,.1,.55,.24,.76,.42s.38,.39,.49,.64,.16,.5,.16,.78c0,.37-.08,.68-.24,.94-.16,.26-.39,.52-.68,.76,.29,.15,.53,.33,.72,.53,.2,.2,.34,.42,.44,.66s.15,.5,.15,.78c0,.33-.07,.65-.2,.96-.13,.31-.33,.59-.59,.83-.26,.24-.57,.43-.92,.57-.36,.14-.75,.21-1.18,.21s-.83-.08-1.18-.24c-.35-.16-.63-.35-.86-.59-.22-.24-.39-.48-.51-.73s-.17-.46-.17-.62c0-.21,.07-.38,.21-.51s.31-.19,.51-.19c.1,0,.2,.03,.3,.09,.09,.06,.16,.13,.19,.22,.19,.51,.39,.89,.61,1.13,.22,.25,.52,.37,.92,.37,.23,0,.45-.06,.66-.17s.38-.28,.52-.5c.14-.22,.21-.47,.21-.76,0-.43-.12-.76-.35-1.01-.23-.24-.56-.37-.98-.37-.07,0-.19,0-.34,.02s-.25,.02-.3,.02c-.2,0-.36-.05-.47-.15s-.17-.24-.17-.42,.07-.32,.2-.42c.13-.11,.33-.16,.59-.16h.22Z"/><path class="cls-1" d="M104.86,41.64v1.25c0,.3-.07,.53-.21,.68-.14,.15-.32,.23-.54,.23s-.39-.08-.53-.23c-.14-.15-.21-.38-.21-.68v-4.17c0-.67,.24-1.01,.73-1.01,.25,0,.43,.08,.54,.24s.17,.39,.18,.7c.18-.31,.36-.54,.55-.7,.19-.16,.44-.24,.75-.24s.62,.08,.92,.24,.44,.37,.44,.62c0,.18-.06,.33-.19,.45-.13,.12-.26,.18-.41,.18-.05,0-.19-.03-.4-.1s-.4-.1-.56-.1c-.22,0-.4,.06-.54,.17s-.25,.29-.32,.51c-.08,.23-.13,.5-.16,.81s-.04,.69-.04,1.14Z"/><path class="cls-1" d="M112.11,42.95v-.15c-.2,.23-.4,.42-.59,.56-.2,.14-.41,.25-.64,.33-.23,.08-.48,.11-.75,.11-.36,0-.69-.08-1-.23-.3-.15-.57-.37-.79-.65s-.39-.61-.51-.99-.17-.79-.17-1.23c0-.94,.23-1.67,.69-2.19,.46-.52,1.06-.78,1.8-.78,.43,0,.79,.07,1.09,.22,.3,.15,.58,.38,.87,.68v-2.21c0-.31,.06-.54,.18-.7,.12-.16,.3-.24,.52-.24s.4,.07,.52,.22c.12,.14,.18,.36,.18,.64v6.6c0,.29-.07,.5-.2,.64s-.3,.21-.51,.21-.37-.07-.51-.22c-.13-.15-.2-.36-.2-.63Zm-2.94-2.2c0,.41,.06,.75,.19,1.04,.13,.29,.3,.5,.52,.64,.22,.14,.46,.22,.72,.22s.5-.07,.72-.21c.22-.14,.39-.35,.52-.63s.2-.64,.2-1.06c0-.4-.07-.74-.2-1.03s-.3-.51-.53-.66c-.22-.15-.46-.23-.73-.23s-.52,.08-.73,.23-.38,.38-.5,.67c-.12,.29-.18,.63-.18,1.01Z"/></g></g></svg>
-    </div>
-    <div class="leaderboard_score">
-      <div class="unlockedtopscore">
+      <div class="unlockedtop">
         <% @top_two.each do |user| %>
-          <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
+          <img src= <%= user.photo %> alt="" width="50px;" height="50px;" class="mt-4">
+          <p><%= user.username %></p>
         <% end %>
       </div>
-      <div class="unlockedtopscore">
+      <div class="unlockedtop">
         <% @top_one.each do |user| %>
-          <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
-        <% end %>
-      </div>
-      <div class="unlockedtopscore">
-        <% @top_three.each do |user| %>
-          <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
-        <% end %>
-      </div>
-  </div>
-  </div>
-  </div>
-  <div class="cards">
-    <% @top_ten.each do |user| %>
-      <div class="card mb-3">
-        <div class="section">
           <img src= <%= user.photo %> alt="" width="50px;" height="50px;">
-        </div>
-        <div class="section">
-          <h2><%= user.username %></h2>
-          <p><strong> <i class="fas fa-trophy"></i>  Total Unlocked: </strong> <%= user.visits.count %> /
-          <%= @locks.count %> </p>
-        </div>
+          <p><%= user.username %></p>
+        <% end %>
       </div>
-    <% end %>
+      <div class="unlockedtop">
+        <% @top_three.each do |user| %>
+          <img src= <%= user.photo %> alt="" width="50px;" height="50px;" class="mt-4">
+          <p><%= user.username %></p>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="leaderboardimage">
+    <?xml version="1.0" encoding="UTF-8"?><svg id="Layer_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.32 72.27"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#a7c4c6;}.cls-3{fill:#fdea75;}.cls-4{fill:#eab279;}.cls-5{fill:#cce6ef;}.cls-6{fill:#e1c023;}.cls-7{fill:#dea64f;}</style></defs><g id="Layer_1-2"><rect class="cls-2" y="20" width="42.25" height="52.27"/><polygon class="cls-5" points="42.25 20 0 20 9.21 10.68 42.25 10.68 42.25 20"/><rect class="cls-6" x="42.25" y="7.04" width="41.44" height="65.23"/><polygon class="cls-3" points="83.69 7.04 42.25 7.04 50.9 0 75.26 0 83.69 7.04"/><rect class="cls-7" x="83.69" y="27.4" width="42.63" height="44.87"/><polygon class="cls-4" points="126.32 27.4 83.69 27.4 83.69 18.55 116.67 18.55 126.32 27.4"/><g><path class="cls-1" d="M12.82,34.31h2.86c.29,0,.5,.06,.65,.18s.22,.28,.22,.48c0,.18-.06,.33-.18,.46-.12,.12-.3,.19-.54,.19h-4.04c-.27,0-.49-.08-.64-.23s-.23-.33-.23-.53c0-.13,.05-.31,.15-.52,.1-.22,.21-.39,.32-.51,.49-.5,.92-.94,1.32-1.3,.39-.36,.67-.6,.84-.71,.3-.21,.55-.42,.75-.64s.35-.43,.46-.66c.1-.22,.16-.44,.16-.66,0-.23-.06-.44-.17-.63-.11-.18-.26-.33-.46-.43-.19-.1-.4-.15-.63-.15-.48,0-.86,.21-1.13,.63-.04,.05-.1,.2-.18,.45s-.18,.43-.29,.56c-.11,.13-.27,.2-.47,.2-.18,0-.33-.06-.46-.18s-.18-.29-.18-.49c0-.25,.06-.52,.17-.79,.11-.27,.28-.52,.51-.75s.51-.4,.86-.54,.75-.21,1.21-.21c.56,0,1.04,.09,1.43,.26,.26,.12,.48,.28,.67,.48s.34,.44,.45,.71c.11,.27,.16,.55,.16,.84,0,.45-.11,.87-.34,1.24-.23,.37-.45,.66-.69,.87-.23,.21-.63,.54-1.18,.99s-.93,.8-1.13,1.05c-.09,.1-.18,.22-.27,.36Z"/><path class="cls-1" d="M19.12,30.48v.18c.26-.35,.55-.6,.86-.76,.31-.16,.67-.24,1.08-.24s.75,.09,1.06,.26c.31,.17,.54,.42,.7,.73,.1,.18,.16,.38,.19,.59s.04,.48,.04,.81v2.78c0,.3-.07,.53-.21,.68-.14,.15-.31,.23-.53,.23s-.4-.08-.54-.24-.21-.38-.21-.67v-2.49c0-.49-.07-.87-.21-1.13-.14-.26-.41-.39-.82-.39-.27,0-.51,.08-.73,.24-.22,.16-.38,.38-.48,.66-.07,.22-.11,.64-.11,1.25v1.88c0,.3-.07,.53-.21,.68-.14,.15-.32,.23-.54,.23s-.39-.08-.53-.24-.21-.38-.21-.67v-4.33c0-.29,.06-.5,.19-.64,.12-.14,.29-.21,.51-.21,.13,0,.25,.03,.36,.09,.11,.06,.19,.16,.25,.28,.06,.12,.1,.28,.1,.46Z"/><path class="cls-1" d="M28.64,34.88v-.15c-.2,.23-.4,.42-.59,.56-.2,.14-.41,.25-.64,.33-.23,.08-.48,.11-.75,.11-.36,0-.69-.08-1-.23-.3-.15-.57-.37-.79-.65s-.39-.61-.51-.99-.17-.79-.17-1.23c0-.94,.23-1.67,.69-2.19,.46-.52,1.06-.78,1.8-.78,.43,0,.79,.07,1.09,.22,.3,.15,.58,.38,.87,.68v-2.21c0-.31,.06-.54,.18-.7,.12-.16,.3-.24,.52-.24s.4,.07,.52,.22c.12,.14,.18,.36,.18,.64v6.6c0,.29-.07,.5-.2,.64s-.3,.21-.51,.21-.37-.07-.51-.22c-.13-.15-.2-.36-.2-.63Zm-2.94-2.2c0,.41,.06,.75,.19,1.04,.13,.29,.3,.5,.52,.64,.22,.14,.46,.22,.72,.22s.5-.07,.72-.21c.22-.14,.39-.35,.52-.63s.2-.64,.2-1.06c0-.4-.07-.74-.2-1.03s-.3-.51-.53-.66c-.22-.15-.46-.23-.73-.23s-.52,.08-.73,.23-.38,.38-.5,.67c-.12,.29-.18,.63-.18,1.01Z"/></g><g><path class="cls-1" d="M57.92,20.94v-4.99c-.93,.71-1.55,1.07-1.88,1.07-.15,0-.29-.06-.41-.18-.12-.12-.18-.26-.18-.42,0-.19,.06-.32,.18-.41s.32-.2,.62-.34c.44-.21,.8-.43,1.06-.66,.27-.23,.5-.49,.71-.77,.2-.29,.34-.46,.4-.53,.06-.07,.18-.1,.35-.1,.19,0,.35,.07,.47,.22,.12,.15,.18,.36,.18,.62v6.28c0,.73-.25,1.1-.75,1.1-.22,0-.4-.07-.54-.22-.14-.15-.2-.37-.2-.66Z"/><path class="cls-1" d="M67.01,19.88c0,.41-.1,.77-.3,1.06-.2,.29-.5,.52-.89,.67-.39,.15-.87,.23-1.43,.23s-1-.08-1.38-.25c-.38-.17-.67-.37-.85-.62-.18-.25-.27-.49-.27-.74,0-.16,.06-.3,.17-.42s.27-.17,.44-.17c.16,0,.28,.04,.36,.11,.08,.08,.17,.18,.24,.32,.15,.27,.34,.47,.55,.6,.21,.13,.5,.2,.87,.2,.3,0,.55-.07,.74-.2,.19-.13,.29-.29,.29-.46,0-.26-.1-.46-.3-.58-.2-.12-.53-.24-.98-.35-.51-.13-.93-.26-1.26-.4s-.58-.33-.78-.56c-.19-.23-.29-.51-.29-.85,0-.3,.09-.58,.27-.85s.44-.48,.79-.64c.35-.16,.77-.24,1.26-.24,.39,0,.74,.04,1.04,.12,.31,.08,.57,.19,.77,.32,.21,.13,.36,.29,.47,.45s.16,.33,.16,.48c0,.17-.06,.31-.17,.42-.12,.11-.28,.17-.49,.17-.15,0-.28-.04-.39-.13s-.23-.22-.37-.39c-.11-.15-.25-.26-.4-.35-.15-.09-.36-.13-.62-.13s-.5,.06-.67,.17c-.18,.11-.27,.26-.27,.43,0,.16,.07,.29,.2,.39,.13,.1,.31,.18,.53,.25,.22,.07,.53,.15,.92,.24,.46,.11,.84,.25,1.14,.41,.29,.16,.52,.34,.67,.56s.23,.46,.23,.73Z"/><path class="cls-1" d="M68.36,15.88h.16v-.9c0-.24,0-.43,.02-.57s.05-.25,.11-.35c.06-.1,.14-.19,.25-.25,.11-.06,.23-.1,.37-.1,.19,0,.36,.07,.51,.21,.1,.1,.17,.21,.2,.35,.03,.14,.04,.33,.04,.58v1.02h.55c.21,0,.37,.05,.49,.15s.17,.23,.17,.39c0,.2-.08,.34-.24,.42s-.39,.12-.68,.12h-.28v2.75c0,.23,0,.41,.02,.54s.06,.23,.13,.31c.07,.08,.19,.12,.35,.12,.09,0,.21-.02,.36-.05,.15-.03,.27-.05,.35-.05,.12,0,.23,.05,.33,.15,.1,.1,.15,.22,.15,.36,0,.24-.13,.43-.39,.55s-.64,.19-1.13,.19c-.47,0-.82-.08-1.06-.24s-.4-.38-.47-.65c-.07-.28-.11-.65-.11-1.11v-2.87h-.2c-.22,0-.38-.05-.49-.15-.11-.1-.17-.23-.17-.39s.06-.29,.18-.39c.12-.1,.29-.15,.52-.15Z"/></g><g><path class="cls-1" d="M99.01,38.82c.34,0,.63-.1,.87-.3,.24-.2,.37-.48,.37-.85,0-.28-.1-.52-.29-.73-.19-.2-.46-.3-.78-.3-.22,0-.41,.03-.55,.09-.14,.06-.26,.14-.34,.25s-.16,.23-.24,.39c-.08,.16-.14,.31-.21,.46-.04,.08-.1,.14-.2,.18-.09,.04-.2,.07-.33,.07-.15,0-.28-.06-.4-.18-.12-.12-.18-.28-.18-.47s.06-.39,.17-.6,.28-.41,.5-.6c.22-.19,.5-.34,.83-.46,.33-.12,.7-.17,1.1-.17,.35,0,.68,.05,.97,.15,.29,.1,.55,.24,.76,.42s.38,.39,.49,.64,.16,.5,.16,.78c0,.37-.08,.68-.24,.94-.16,.26-.39,.52-.68,.76,.29,.15,.53,.33,.72,.53,.2,.2,.34,.42,.44,.66s.15,.5,.15,.78c0,.33-.07,.65-.2,.96-.13,.31-.33,.59-.59,.83-.26,.24-.57,.43-.92,.57-.36,.14-.75,.21-1.18,.21s-.83-.08-1.18-.24c-.35-.16-.63-.35-.86-.59-.22-.24-.39-.48-.51-.73s-.17-.46-.17-.62c0-.21,.07-.38,.21-.51s.31-.19,.51-.19c.1,0,.2,.03,.3,.09,.09,.06,.16,.13,.19,.22,.19,.51,.39,.89,.61,1.13,.22,.25,.52,.37,.92,.37,.23,0,.45-.06,.66-.17s.38-.28,.52-.5c.14-.22,.21-.47,.21-.76,0-.43-.12-.76-.35-1.01-.23-.24-.56-.37-.98-.37-.07,0-.19,0-.34,.02s-.25,.02-.3,.02c-.2,0-.36-.05-.47-.15s-.17-.24-.17-.42,.07-.32,.2-.42c.13-.11,.33-.16,.59-.16h.22Z"/><path class="cls-1" d="M104.86,41.64v1.25c0,.3-.07,.53-.21,.68-.14,.15-.32,.23-.54,.23s-.39-.08-.53-.23c-.14-.15-.21-.38-.21-.68v-4.17c0-.67,.24-1.01,.73-1.01,.25,0,.43,.08,.54,.24s.17,.39,.18,.7c.18-.31,.36-.54,.55-.7,.19-.16,.44-.24,.75-.24s.62,.08,.92,.24,.44,.37,.44,.62c0,.18-.06,.33-.19,.45-.13,.12-.26,.18-.41,.18-.05,0-.19-.03-.4-.1s-.4-.1-.56-.1c-.22,0-.4,.06-.54,.17s-.25,.29-.32,.51c-.08,.23-.13,.5-.16,.81s-.04,.69-.04,1.14Z"/><path class="cls-1" d="M112.11,42.95v-.15c-.2,.23-.4,.42-.59,.56-.2,.14-.41,.25-.64,.33-.23,.08-.48,.11-.75,.11-.36,0-.69-.08-1-.23-.3-.15-.57-.37-.79-.65s-.39-.61-.51-.99-.17-.79-.17-1.23c0-.94,.23-1.67,.69-2.19,.46-.52,1.06-.78,1.8-.78,.43,0,.79,.07,1.09,.22,.3,.15,.58,.38,.87,.68v-2.21c0-.31,.06-.54,.18-.7,.12-.16,.3-.24,.52-.24s.4,.07,.52,.22c.12,.14,.18,.36,.18,.64v6.6c0,.29-.07,.5-.2,.64s-.3,.21-.51,.21-.37-.07-.51-.22c-.13-.15-.2-.36-.2-.63Zm-2.94-2.2c0,.41,.06,.75,.19,1.04,.13,.29,.3,.5,.52,.64,.22,.14,.46,.22,.72,.22s.5-.07,.72-.21c.22-.14,.39-.35,.52-.63s.2-.64,.2-1.06c0-.4-.07-.74-.2-1.03s-.3-.51-.53-.66c-.22-.15-.46-.23-.73-.23s-.52,.08-.73,.23-.38,.38-.5,.67c-.12,.29-.18,.63-.18,1.01Z"/></g></g></svg>
+  </div>
+  <div class="leaderboard_score">
+    <div class="unlockedtopscore">
+      <% @top_two.each do |user| %>
+        <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
+      <% end %>
+    </div>
+    <div class="unlockedtopscore">
+      <% @top_one.each do |user| %>
+        <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
+      <% end %>
+    </div>
+    <div class="unlockedtopscore">
+      <% @top_three.each do |user| %>
+        <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
+      <% end %>
+    </div>
+  </div>
+</div>
+<div class="cards">
+  <% @top_ten.each do |user| %>
+    <div class="card mb-3">
+      <div class="section">
+        <img src= <%= user.photo %> alt="" width="50px;" height="50px;">
+      </div>
+      <div class="section">
+        <h2><%= user.username %></h2>
+        <p><strong> <i class="fas fa-unlock-alt"></i>   Total Unlocked: </strong> <%= user.visits.count %> /
+        <%= @locks.count %> </p>
+      </div>
+    </div>
+  <% end %>
 </div>
