fixed leaderboad formatting

--- a/app/assets/stylesheets/pages/_leaderboard.scss
+++ b/app/assets/stylesheets/pages/_leaderboard.scss
@@ -18,4 +18,10 @@ color: $unlocked_dark;
   justify-content: space-around;
   position: relative;
   bottom: 50px;
+  padding: 0px 15px 0px 15px;
+  color: $white;
+}
+
+#leaderboard {
+  padding: 15px 15px 0px;
 }
