--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -18,7 +18,7 @@
     <img src= <%= visit.lock.image %> alt="" width="50px;" height="50px;">
     </div>
     <div class="section">
-      <h2><%= visit.lock.name %></h2>
+      <h2><%= link_to visit.lock.name, lock_path(visit.lock.id) %></h2>
       <p> <%= visit.unlocked_date %></p>
     </div>
   </div>
