refactored leaderboard & fixed glitch

--- a/app/views/pages/leaderboard.html.erb
+++ b/app/views/pages/leaderboard.html.erb
@@ -4,22 +4,16 @@
     <br>
     <div class="leaderboard">
       <div class="unlockedtop">
-        <% @top_two.each do |user| %>
-          <%= link_to image_tag(user.photo, class: "avatar mt-4") , profile_path(user.username) %>
-          <p><%= user.username %></p>
-        <% end %>
+          <%= link_to image_tag(@top_two.photo, class: "avatar mt-4") , profile_path(@top_two.username) %>
+          <p><%= @top_two.username %></p>
       </div>
       <div class="unlockedtop">
-        <% @top_one.each do |user| %>
-          <%= link_to image_tag(user.photo, class: "avatar") , profile_path(user.username) %>
-          <p><%= user.username %></p>
-        <% end %>
+          <%= link_to image_tag(@top_one.photo, class: "avatar") , profile_path(@top_one.username) %>
+          <p><%= @top_one.username %></p>
       </div>
       <div class="unlockedtop">
-        <% @top_three.each do |user| %>
-          <%= link_to image_tag(user.photo, class: "avatar mt-4") , profile_path(user.username) %>
-          <p><%= user.username %></p>
-        <% end %>
+          <%= link_to image_tag(@top_three.photo, class: "avatar mt-4") , profile_path(@top_three.username) %>
+          <p><%= @top_three.username %></p>
       </div>
     </div>
   </div>
@@ -29,19 +23,13 @@
 </div>
   <div class="leaderboard_score">
     <div class="unlockedtopscore">
-      <% @top_two.each do |user| %>
-        <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
-      <% end %>
+        <h4><i class="fas fa-unlock-alt"></i> <%= @top_two.visits.count %></h4>
     </div>
     <div class="unlockedtopscore">
-      <% @top_one.each do |user| %>
-        <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
-      <% end %>
+        <h4><i class="fas fa-unlock-alt"></i> <%= @top_one.visits.count %></h4>
     </div>
     <div class="unlockedtopscore">
-      <% @top_three.each do |user| %>
-        <h4><i class="fas fa-unlock-alt"></i> <%= user.visits.count %></h4>
-      <% end %>
+        <h4><i class="fas fa-unlock-alt"></i> <%= @top_three.visits.count %></h4>
     </div>
   </div>
 <div class="container">
