updated profile page with a bit of extra information

--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -31,3 +31,13 @@
         <% end %>
 </div>
 </div>
+<br>
+<div class="container">
+<div class="center">
+<p><i class="fas fa-map-marker-alt"></i> <%= @lock.address %></p>
+<h1>Description</h1>
+<p><%= @lock.description %></p>
+<h1>Fun Fact</h1>
+<p><%= @lock.special_content %></p>
+</div>
+</div>
