--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container text-justify">
   <br>
-  <div class="unlocked">
+  <div class="center">
     <h1>Congratulations Explorer!</h1>
     <p><%= link_to @visit.lock.name, lock_path(@visit.lock) %> has now been unlocked and added to your collection!</p>
     <%= video_tag("lock_animation_3.mp4", controls: true, size: "320x240") %>
