--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -3,7 +3,7 @@
   <div class="center">
     <h1>Congratulations Explorer!</h1>
     <p><%= link_to @visit.lock.name, lock_path(@visit.lock) %> has now been unlocked and added to your collection!</p>
-    <%= video_tag("lock_animation_3.mp4", controls: true, size: "320x240") %>
+    <%= image_tag("lock_animation.gif", size: "320x181") %>
     <p></p>
     <h1>But wait... There's more</h1>
     <p>Here is an interesting fact about <%= @visit.lock.name %></p>
