updated formatting for image upload

--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -39,13 +39,21 @@
 <p><%= @lock.description %></p>
 <h1>Fun Fact</h1>
 <p><%= @lock.special_content %></p>
-<h1>Explorer Photos</h1>
-  <p>here are all the other explorer's photos of <%= @lock.name %>
+<h1>Community</h1>
+<%= @lock.visits.count %> other explorer's have visited
+<%= @lock.name %>! Check out some of thier photos and thoughts...</p>
+  <br>
+  <div class= "cards">
   <% Visit.where(lock_id: @lock.id).each do |visit| %>
     <% if visit.photo.attached? == true %>
-    <%= cl_image_tag visit.photo.key, height: 300, width: 400, crop: :fill %>
+    <div class="card mb-3">
+    <%= cl_image_tag visit.photo.key, height: 100, width: 100, crop: :fill %>
+    <p>Unlocked by <%= link_to User.where(id: visit.user_id).first.username , profile_path(User.where(id: visit.user_id).first.username) %>
+    at <%= visit.unlocked_date %> </p>
     <% end %>
+    </div>
   <% end %>
+  </div>
 </div>
 </div>
 </div>
