--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,3 @@
-<p></p>
 <div class="container justify-content-center">
 <h2>Sign up</h2>
 <p>Start unlocking locks and having an adventure in Melbourne today!</p>
@@ -9,7 +8,7 @@
     <%= f.input :username,
                 required: true,
                 input_html: { autocomplete: "username" } %>
-    <%= f.input :photo,
+    <%= f.input :photo, as: :file,
                 required: true,
                 input_html: { autocomplete: "photo" } %>
     <%= f.input :email,
