--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="profile_banner">
 <br>
-        <img src=<%= @user.photo %>>
+        <%= image_tag(@user.photo, class: "avatar") %>
         <h1><%= @user.username %>'s Profile Page</h1>
   </div>
 <div class="mini_banner">
