--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav me-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Add a new lock", new_lock_path, class: "nav-link" %>
+          <%= link_to "Suggest a lock", new_lock_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "View requests", "#", class: "nav-link" %>
