--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -4,7 +4,7 @@
         <h1><%= @user.username %>'s Profile Page</h1>
   </div>
 <div class="mini_banner">
-    <p><strong> <i class="fas fa-trophy"></i>  Total Unlocked: </strong> <%= @user_visits.count %> /
+    <p class="mb-0"><strong> <i class="fas fa-trophy"></i>  Total Unlocked: </strong> <%= @user_visits.count %> /
     <%= @locks.count %> </p>
 </div>
 <div class="container">
