added cl tag and .key to photo to get heroku images to display

--- a/app/views/locks/_info_window.html.erb
+++ b/app/views/locks/_info_window.html.erb
@@ -1,6 +1,6 @@
 <div class="profile_banner">
         <br>
-        <%= image_tag(lock.photo, class: "avatar") %>
+        <%= cl_image_tag(lock.photo.key, class: "avatar") %>
         <h1><%= link_to lock.name, lock %></h1>
 </div>
 <div data-controller="lock-show">
