--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -10,7 +10,7 @@
      <i class="fas fa-trophy"></i>
     <% end %>
     <% if user_signed_in? %>
-    <%= link_to image_tag(current_user.photo, class: "avatar") , profile_path(current_user.username) %>
+    <%= link_to cl_image_tag(current_user.photo.key, class: "avatar") , profile_path(current_user.username) %>
     <% else %>
     <a href="<%new_user_session_path%>"><i class="fas fa-user"></i></a>
     <% end %>
