--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Suggest a lock", new_lock_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "View requests", "#", class: "nav-link" %>
+          <%= link_to "View requests", locks_view_requests_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
         <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
