--- a/app/assets/stylesheets/components/_profile_banner.scss
+++ b/app/assets/stylesheets/components/_profile_banner.scss
@@ -14,10 +14,19 @@
   padding: 20px;
 }
 
+.mini_mini {
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
 .mini_banner svg {
   width: 50px;
   height: 50px;
-  margin-bottom: 10px;
 }
 
 .profile_banner img {
