--- a/app/assets/stylesheets/pages/_lock_show.scss
+++ b/app/assets/stylesheets/pages/_lock_show.scss
@@ -1,12 +1,10 @@
 .address_box {
   display: flex;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-bottom: 20px;
 }
 
 .address_box p {
-  font-size: smaller;
-
+text-align: left;
 }
 
 .address_box i {
@@ -14,19 +12,22 @@
 }
 
 .long_n_lat {
-  display: flex;
-  justify-content: space-between;
+  background-color: $unlocked-gray-light;
+  padding: 5px 10px;
+  border-radius: 10px;
 }
 
 .address_text {
-  padding: 20px;
+  padding: 15px;
   text-align: left;
-  background-color: $unlocked-gray-light;
-  padding: 5px;
-  border-radius: 10px;
+  border-radius: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .address_map {
   border: 5px;
-  border-color: $unlocked-blue;
+  margin-right: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
