--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -41,10 +41,10 @@
         <button class="nav-link active" id="Overview-tab" data-bs-toggle="tab" data-bs-target="#Overview" type="button" role="tab" aria-controls="Overview" aria-selected="true"> Overview</button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="SecretsUnlocked-tab" data-bs-toggle="tab" data-bs-target="#SecretsUnlocked" type="button" role="tab" aria-controls="SecretsUnlocked" aria-selected="false">Secrets</button>
+        <button class="nav-link" id="Reviews-tab" data-bs-toggle="tab" data-bs-target="#Reviews" type="button" role="tab" aria-controls="Reviews" aria-selected="false"> Reviews <%= "(#{@reviews.count})" %></button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="Community-tab" data-bs-toggle="tab" data-bs-target="#Community" type="button" role="tab" aria-controls="Community" aria-selected="false"> Community</button>
+        <button class="nav-link" id="Photos-tab" data-bs-toggle="tab" data-bs-target="#Photos" type="button" role="tab" aria-controls="Photos" aria-selected="false"> Photos <%= "(#{@photos.count})" %></button>
       </li>
     </ul>
     <div class="tab-content" id="myTabContent">
@@ -69,12 +69,7 @@
         <h1>Description</h1>
         <p><%= @lock.description %></p>
 
-      </div>
-
-
-
-    <div class="tab-pane fade" id="SecretsUnlocked" role="tabpanel" aria-labelledby="SecretsUnlocked-tab">
-      <br>
+              <br>
       <h1>Secrets</h1>
       <% if Visit.where(user_id: current_user, lock_id: @lock.id).exists? %>
         <p><%= @lock.special_content %></p>
@@ -84,12 +79,29 @@
           <p>You must unlock this location before it will reveal its secrets!</p>
         </div>
       <% end %>
+
+      </div>
+
+    <div class="tab-pane fade" id="Reviews" role="tabpanel" aria-labelledby="Reviews-tab">
+    <br>
+    <% if @current_user_visit.exists? && @visit.reviews == [] %>
+      <p>Tell us what you thought of <%= @lock.name  %>!</p>
+      <%= simple_form_for [@visit, @review] do |f| %>
+            <%= f.input :rating, collection: [1,2,3,4,5], placeholder: 'Enter a rating from 1 - 5' %>
+            <%= f.input :comment, placeholder: 'Leave a comment' %>
+            <%= f.button :submit, :class => "btn btn-primary" %>
+      <% end %>
+    <% end %>
+    <br>
+    <% @reviews.each do |review| %>
+    <%= review.comment %>
+    <% end %>
     </div>
 
 
-      <div class="tab-pane fade" id="Community" role="tabpanel" aria-labelledby="Community-tab">
+      <div class="tab-pane fade" id="Photos" role="tabpanel" aria-labelledby="Photos-tab">
       <br>
-    <h1>Community</h1>
+    <h1>Photos</h1>
     <p><%= @lock.visits.count %> other explorer's have visited
     <%= @lock.name  %>!</p>
     <% if @current_user_visit.exists? && @current_user_visit.first.photo.attached? == false %>
@@ -99,14 +111,6 @@
       <% end %>
     <% end %>
     <br>
-    <% if @current_user_visit.exists? && @visit.reviews == [] %>
-    <p>Tell us what you thought of <%= @lock.name  %>!</p>
-      <%= simple_form_for [@visit, @review] do |f| %>
-            <%= f.input :rating, collection: [1,2,3,4,5], placeholder: 'Enter a rating from 1 - 5' %>
-            <%= f.input :comment, placeholder: 'Leave a comment' %>
-            <%= f.button :submit, :class => "btn btn-primary" %>
-      <% end %>
-    <% end %>
     <br>
     <% if Visit.where(lock_id: @lock.id).exists?%>
     <p> Here is How other Explorers went...</p>
