bit of front end

--- a/app/views/locks/index.html.erb
+++ b/app/views/locks/index.html.erb
@@ -1,16 +1,21 @@
-  <div class="search_bar d-flex justify-content-center">
-    <%= form_tag locks_path, method: :get do %>
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control",
-        placeholder: "Search locks"
-      %>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-  <div style="width: 100%; height: 100%;"
+
+  <div class = "position-absolute" style="width: 100%; height: 100%;"
     data-controller="mapbox"
     data-mapbox-markers-value="<%= @markers.to_json %>"
     data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
 
+  </div>
+  <div>
+    <div class="position-relative">
+      <div class = "search_bar">
+        <%= form_tag locks_path, method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Search locks"
+        %>
+      </div>
+      <%= submit_tag "Search", class: "btn btn-primary invisible" %>
+      <% end %>
+    </div>
   </div>
