--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,3 +2,13 @@
 @import "home";
 @import "profile";
 @import "leaderboard";
+
+
+.search_bar {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  width: 280px;
+}
