--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,14 +3,4 @@
 @import "profile";
 @import "leaderboard";
 @import "lock_show";
-
-
-.search_bar {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  width: 280px;
-}
-
+@import "search_bar";
