--- a/app/views/locks/index.html.erb
+++ b/app/views/locks/index.html.erb
@@ -1,4 +1,7 @@
 
+
+
+
   <div class = "position-absolute" style="width: 100%; height: 100%;"
     data-controller="mapbox"
     data-mapbox-markers-value="<%= @markers.to_json %>"
@@ -14,6 +17,7 @@
           class: "form-control",
           placeholder: "Search locks"
         %>
+        <p class = "notice d-flex justify-content-center" id="notice"><%= notice %></p>
       </div>
       <%= submit_tag "Search", class: "btn btn-primary invisible" %>
       <% end %>
