--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,3 +14,4 @@ $unlocked-light: #b0dfe0;
 $unlocked-dark: #065863;
 $unlocked-gray: #c6c6c6;
 $unlocked-gray-light: #d7d7d7;
+$unlocked-orange: #fabc19;
