--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -1,13 +1,13 @@
 <div class="px-3 border-top navbar navbar-expand-sm navbar-light bottom_navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to root_path do %>
-     <i class="fas fa-search"></i>
-    <% end %>
-    <%= link_to root_path do %>
-      <i class="fas fa-home"></i>
+        <%= link_to root_path do %>
+      <i class="fa-solid fa-house-chimney"></i>
     <% end %>
         <%= link_to leaderboard_path do %>
-     <i class="fas fa-trophy"></i>
+     <i class="fa-solid fa-trophy"></i>
+    <% end %>
+    <%= link_to notifications_path(current_user.username) do %>
+     <i class="fa-solid fa-bell"></i>
     <% end %>
     <% if user_signed_in? %>
     <%= link_to cl_image_tag(current_user.photo.key, class: "avatar") , profile_path(current_user.username) %>
