--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,3 +1,3 @@
 <div class="p-4">
-<%= notification.to_notification.message  %>
+<%= link_to notification.to_notification.message, notification.to_notification.url %>
 </div>
